--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Nov 04 2020 02:36:17 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Nov 13 2020 02:54:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5fa1e4df1e926521818095ab" data-wf-site="5fa1e4df1e926519298095ae">
 <head>
   <meta charset="utf-8">
@@ -26,7 +26,7 @@
 <body class="body">
   <div data-collapse="small" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="container-2 w-container">
-      <a href="#" class="brand w-nav-brand"><img src="images/imageedit_25_4118220537-copy.png" width="300" sizes="(max-width: 479px) 96vw, 300px" srcset="images/imageedit_25_4118220537-copy.png 500w, images/imageedit_25_4118220537-copy.png 800w, images/imageedit_25_4118220537-copy.png 877w" alt="" class="image-2"></a>
+      <a href="#" class="brand w-nav-brand"><img src="images/imageedit_25_4118220537-copy.png" width="300" sizes="(max-width: 479px) 96vw, 300px" srcset="images/imageedit_25_4118220537-copy-p-500.png 500w, images/imageedit_25_4118220537-copy-p-800.png 800w, images/imageedit_25_4118220537-copy.png 877w" alt="" class="image-2"></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="about.html" class="nav-link-2 w-nav-link">Who Are We?</a>
         <a href="#Contact-Section" class="nav-link-4 w-nav-link">Contact</a>
@@ -185,7 +185,14 @@
           <a href="#" class="link-2 home">INFO@PHARCITY.COM</a>
         </div>
         <a href="book-a-meeting.html" class="hero-button contact w-button">🗓 Book A Meeting</a>
-        <div class="text-block-9">Copyright © 2020 Pharcity LLC</div>
+        <div class="w-row">
+          <div class="w-col w-col-6">
+            <p class="paragraph">30 N Gould Street, Unit 4608<br>Sheridan, WY<br>USA 82801<br>416 356 6660</p>
+          </div>
+          <div class="w-col w-col-6">
+            <div class="text-block-9">Copyright © 2020 Pharcity LLC</div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
