--- a/book-a-meeting.html
+++ b/book-a-meeting.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html><!--  Last Published: Fri Nov 13 2020 02:54:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Dec 11 2020 23:01:00 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5fa1e4df1e92650a808095ad" data-wf-site="5fa1e4df1e926519298095ae">
 <head>
   <meta charset="utf-8">
-  <title>Book A Meeting | Pharcity Distributor</title>
+  <title>Book A Meeting | Pharcity Distribution</title>
   <meta content="We find profitable products and vet them for sale on Amazon. We offer these products to you to purchase at wholesale prices." name="description">
-  <meta content="Book A Meeting | Pharcity Distributor" property="og:title">
+  <meta content="Book A Meeting | Pharcity Distribution" property="og:title">
   <meta content="We find profitable products and vet them for sale on Amazon. We offer these products to you to purchase at wholesale prices." property="og:description">
-  <meta content="https://i.ibb.co/1KdHrKS/Webflow-Pharcity-Distribution-2020-11-03-21-25-57.jpg" property="og:image">
-  <meta content="Book A Meeting | Pharcity Distributor" property="twitter:title">
+  <meta content="Book A Meeting | Pharcity Distribution" property="twitter:title">
   <meta content="We find profitable products and vet them for sale on Amazon. We offer these products to you to purchase at wholesale prices." property="twitter:description">
-  <meta content="https://i.ibb.co/1KdHrKS/Webflow-Pharcity-Distribution-2020-11-03-21-25-57.jpg" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -26,7 +24,7 @@
 <body class="body-3">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="container-2 w-container">
-      <a href="index.html" class="brand w-nav-brand"><img src="images/Pharcity_Logo.svg" width="200" alt=""></a>
+      <a href="index.html" class="brand w-nav-brand"><img src="images/imageedit_25_4118220537-copy.png" width="300" sizes="(max-width: 479px) 96vw, 300px" srcset="images/imageedit_25_4118220537-copy-p-500.png 500w, images/imageedit_25_4118220537-copy-p-800.png 800w, images/imageedit_25_4118220537-copy.png 877w" alt=""></a>
       <nav role="navigation" class="nav-menu-3 w-nav-menu">
         <a href="about.html" class="nav-link-2 w-nav-link">About</a>
         <a href="#" class="nav-link-4 w-nav-link">Contact</a>
