--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html><!--  Last Published: Fri Nov 13 2020 02:54:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Dec 11 2020 23:01:00 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5fa1e4df1e926521818095ab" data-wf-site="5fa1e4df1e926519298095ae">
 <head>
   <meta charset="utf-8">
-  <title>Pharcity Distributor | Your Wholesale Amazon Distributor in USA</title>
+  <title>Pharcity Distribution | Your Wholesale Amazon Distributor in USA</title>
   <meta content="We find profitable products and vet them for sale on Amazon. We offer these products to you to purchase at wholesale prices." name="description">
-  <meta content="Pharcity Distributor | Your Wholesale Amazon Distributor in USA" property="og:title">
+  <meta content="Pharcity Distribution | Your Wholesale Amazon Distributor in USA" property="og:title">
   <meta content="We find profitable products and vet them for sale on Amazon. We offer these products to you to purchase at wholesale prices." property="og:description">
-  <meta content="https://i.ibb.co/1KdHrKS/Webflow-Pharcity-Distribution-2020-11-03-21-25-57.jpg" property="og:image">
-  <meta content="Pharcity Distributor | Your Wholesale Amazon Distributor in USA" property="twitter:title">
+  <meta content="Pharcity Distribution | Your Wholesale Amazon Distributor in USA" property="twitter:title">
   <meta content="We find profitable products and vet them for sale on Amazon. We offer these products to you to purchase at wholesale prices." property="twitter:description">
-  <meta content="https://i.ibb.co/1KdHrKS/Webflow-Pharcity-Distribution-2020-11-03-21-25-57.jpg" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -26,9 +24,9 @@
 <body class="body">
   <div data-collapse="small" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="container-2 w-container">
-      <a href="#" class="brand w-nav-brand"><img src="images/imageedit_25_4118220537-copy.png" width="300" sizes="(max-width: 479px) 96vw, 300px" srcset="images/imageedit_25_4118220537-copy-p-500.png 500w, images/imageedit_25_4118220537-copy-p-800.png 800w, images/imageedit_25_4118220537-copy.png 877w" alt="" class="image-2"></a>
+      <a href="#" class="brand w-nav-brand"><img src="images/imageedit_25_4118220537-copy.png" width="300" sizes="(max-width: 479px) 79vw, 300px" srcset="images/imageedit_25_4118220537-copy-p-500.png 500w, images/imageedit_25_4118220537-copy-p-800.png 800w, images/imageedit_25_4118220537-copy.png 877w" alt="" class="image-2"></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
-        <a href="about.html" class="nav-link-2 w-nav-link">Who Are We?</a>
+        <a href="http://amwsellers.com" class="nav-link-2 w-nav-link">AMW Sellers</a>
         <a href="#Contact-Section" class="nav-link-4 w-nav-link">Contact</a>
       </nav>
       <div class="menu-button w-nav-button">
@@ -40,11 +38,10 @@
     <div class="hero-container w-container">
       <div class="hero-div">
         <h1 class="hero-header-text">Your Wholesale amazon distributor in usa</h1>
-        <div class="text-block-8">by finding good products, checking the sales opportunity on Amazon, and letting you purchase at wholesale</div>
-        <a href="book-a-meeting.html" class="hero-button w-button">🗓 Book A Meeting</a>
+        <div class="text-block-8">Our team will find good products, check the opportunity on Amazon, and let you purchase them at wholesale prices</div>
+        <a href="book-a-meeting.html" class="hero-button w-button">Book A Meeting</a>
         <a href="#Our-Process" class="hero-button w-button">How It Works</a>
       </div>
-      <div class="div-block-11"></div>
     </div>
   </div>
   <div id="Services-Section" class="servies-section">
@@ -75,12 +72,12 @@
     </div>
   </div>
   <div id="Our-Process" class="process-section">
-    <div class="w-container">
-      <div>
+    <div class="container-6 w-container">
+      <div class="div-block-12">
         <h1 class="heading-6">HOW IT WORKS:</h1>
         <div data-duration-in="500" data-duration-out="200" class="tabs w-tabs">
           <div class="tabs-menu w-tab-menu">
-            <a data-w-tab="Tab 1" class="tab-link-tab-1 w-inline-block w-tab-link">
+            <a data-w-tab="Tab 1" class="tab-link-tab-1 w-inline-block w-tab-link w--current">
               <div class="text-block-2">1. SIGN UP</div>
             </a>
             <a data-w-tab="Tab 2" class="tab-link-tab-3 w-inline-block w-tab-link">
@@ -95,20 +92,20 @@
             <a data-w-tab="Tab 5" class="tab-link-tab-6 w-inline-block w-tab-link">
               <div class="text-block-2">5. PURCHASE</div>
             </a>
-            <a data-w-tab="Tab 6" class="tab-link-tab-7 w-inline-block w-tab-link w--current">
+            <a data-w-tab="Tab 6" class="tab-link-tab-7 w-inline-block w-tab-link">
               <div class="text-block-2">6. SHIP TO PREP</div>
             </a>
           </div>
           <div class="tabs-content w-tab-content">
-            <div data-w-tab="Tab 1" class="tab-pane w-tab-pane">
+            <div data-w-tab="Tab 1" class="tab-pane w-tab-pane w--tab-active">
               <div class="div-block-8"><img src="images/Purchase.svg" width="40" alt="" class="how-it-works-image">
                 <div class="text-block-6">OPEN AN ACCOUNT WITH US</div>
-                <div class="text-block-7">Sign up by emailing orders@pharcity.com. <br><br>Fill out our application form and send us your resellers permit. Once approved, you are ready to start purchasing pre-vetted products!</div>
+                <div class="text-block-7">Sign up by emailing accounts@pharcity.com. <br><br>Fill out our application form and send us your resellers permit. Once approved, you are ready to start purchasing pre-vetted products!</div>
               </div>
             </div>
             <div data-w-tab="Tab 2" class="w-tab-pane">
               <div class="div-block-8">
-                <div class="div-block-8"><img src="images/Delivery-1.svg" width="40" alt="" class="how-it-works-image">
+                <div class="div-block-8"><img src="images/message-circle-1.svg" width="40" alt="" class="how-it-works-image">
                   <div class="text-block-6">JOIN THE TELEGRAM GROUP</div>
                   <div class="text-block-7">Once your application is approved, you will be added to the Telegram group chat, where we post product opportunities for you to take a look at. </div>
                 </div>
@@ -116,17 +113,17 @@
             </div>
             <div data-w-tab="Tab 3" class="w-tab-pane">
               <div class="div-block-8">
-                <div class="div-block-8"><img src="images/Prep.svg" width="40" alt="" class="how-it-works-image">
+                <div class="div-block-8"><img src="images/bell.svg" width="40" alt="" class="how-it-works-image">
                   <div class="text-block-6">GET NOTIFICATIONS ON TELEGRAM</div>
-                  <div class="text-block-7">Once we find good product opportunities, we post them on Telegram with the ASIN, Product price, quantity available, ROI, and Profit %. <br><br>Products are first-come-first-serve.</div>
+                  <div class="text-block-7">When we find good product opportunities, we post them in a spreadsheet with the ASIN, product price, quantity, ROI, and Profit %. <br><br>Products are first-come-first-serve and can be replenished.</div>
                 </div>
               </div>
             </div>
             <div data-w-tab="Tab 4" class="w-tab-pane">
-              <div class="div-block-8"><img src="images/Delivery-1.svg" width="40" alt="" class="how-it-works-image">
+              <div class="div-block-8"><img src="images/search.svg" width="40" alt="" class="how-it-works-image">
                 <div class="div-block-8">
-                  <div class="text-block-6">TAKE A SECOND LOOK</div>
-                  <div class="text-block-7">All of our data and opinions are based on experience and what we would do ourselves. We are doing the research to make your lives easier.<br><br>With that being said, you should always double check the product and vet them through your own product research criteria.</div>
+                  <div class="text-block-6">EVALUATE THE OPPORTUNITY</div>
+                  <div class="text-block-7">All of our data and opinions are based on experience and what we would do ourselves. We are doing the research and the heavy lifting to make your lives easier.<br><br>With that being said, you should always double check the product and vet them through your own product research criteria.</div>
                 </div>
               </div>
             </div>
@@ -134,15 +131,15 @@
               <div class="div-block-8">
                 <div class="div-block-8"><img src="images/Online-Sales.svg" width="40" alt="" class="how-it-works-image">
                   <div class="text-block-6">PURCHASE THE ITEMS</div>
-                  <div class="text-block-7">If you see an ASIN that you want to purchase, email us a PO as soon as possible!<br><br>The items are all first-come-first-serve and will be sold with minimums. A lot of products ARE replenish-able, making it easy to simply reorder profitable products.</div>
+                  <div class="text-block-7">If you see an ASIN that you want to purchase, email us a PO as soon as possible!<br><br>The items are all first-come-first-serve and will be sold with MOQs. A lot of products ARE replenish-able, making it easy to simply reorder profitable products.</div>
                 </div>
               </div>
             </div>
-            <div data-w-tab="Tab 6" class="w-tab-pane w--tab-active">
+            <div data-w-tab="Tab 6" class="w-tab-pane">
               <div class="div-block-8">
                 <div class="div-block-8"><img src="images/Fulfillment.svg" width="40" alt="" class="how-it-works-image">
                   <div class="text-block-6">SHIP YOUR PRODUCTS TO YOUR PREP CENTRE</div>
-                  <div class="text-block-7">Once we receive payment, we will ship the items to your preferred prep centre (or address) so you can get the items prepared and ready for FBA.</div>
+                  <div class="text-block-7">Once we receive payment, we will ship the items to your preferred prep centre (or address) so you can get the items prepared and ready for FBA or FBM.</div>
                 </div>
               </div>
             </div>
@@ -178,7 +175,7 @@
         <h1 class="contact-header home">LET&#x27;S CONNECT!</h1>
         <div class="new-business-div">
           <h5 class="heading-5">OPENING ACCOUNT INQUIRIES?</h5>
-          <a href="#" class="link-2 home">ORDERS@PHARCITY.COM</a>
+          <a href="#" class="link-2 home">ACCOUNTS@PHARCITY.COM</a>
         </div>
         <div class="say-hi-div">
           <h5 class="heading-5">QUESTIONS?</h5>
@@ -189,8 +186,8 @@
           <div class="w-col w-col-6">
             <p class="paragraph">30 N Gould Street, Unit 4608<br>Sheridan, WY<br>USA 82801<br>416 356 6660</p>
           </div>
-          <div class="w-col w-col-6">
-            <div class="text-block-9">Copyright © 2020 Pharcity LLC</div>
+          <div class="column-3 w-col w-col-6">
+            <div class="text-block-9">Copyright © 2020 Pharcity LLC</div>
           </div>
         </div>
       </div>
