--- a/book-a-meeting.html
+++ b/book-a-meeting.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Dec 11 2020 23:01:00 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Feb 10 2021 22:31:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5fa1e4df1e92650a808095ad" data-wf-site="5fa1e4df1e926519298095ae">
 <head>
   <meta charset="utf-8">
@@ -24,10 +24,10 @@
 <body class="body-3">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="container-2 w-container">
-      <a href="index.html" class="brand w-nav-brand"><img src="images/imageedit_25_4118220537-copy.png" width="300" sizes="(max-width: 479px) 96vw, 300px" srcset="images/imageedit_25_4118220537-copy-p-500.png 500w, images/imageedit_25_4118220537-copy-p-800.png 800w, images/imageedit_25_4118220537-copy.png 877w" alt=""></a>
+      <a href="index.html" class="brand w-nav-brand"><img src="images/imageedit_25_4118220537-copy.png" width="300" sizes="(max-width: 479px) 75vw, 300px" srcset="images/imageedit_25_4118220537-copy-p-500.png 500w, images/imageedit_25_4118220537-copy-p-800.png 800w, images/imageedit_25_4118220537-copy.png 877w" alt=""></a>
       <nav role="navigation" class="nav-menu-3 w-nav-menu">
         <a href="about.html" class="nav-link-2 w-nav-link">About</a>
-        <a href="#" class="nav-link-4 w-nav-link">Contact</a>
+        <a href="index.html" class="nav-link-4 w-nav-link">Contact</a>
       </nav>
       <div class="menu-button-3 w-nav-button">
         <div class="icon w-icon-nav-menu"></div>
